[metadata]
name = pyJoy
version = 1.0.0
description = Simple and quick to use Joystick manager tools for robotic applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rooholla-KhorramBakht/pyJoy
author = Rooholla KhorramBakht
author_email = rk4342@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.22.3
    pygame

[options.entry_points]
console_scripts =
    # fr3env-hello-world = FR3Env.hello_world:main
    # fr3env-hello-world-hierarchical = FR3Env.hello_world_hierarchical:main
    # fr3env-waypoint-demo = FR3Env.waypoint_demo:main
    # fr3env-waypoint-hierarchical-demo = FR3Env.waypoint_hierarchical_demo:main
    print_demo = pyJoy.print_demo:main
